Add user authentication middleware
Introduced a new middleware to handle user authentication for protected routes. This ensures that only authenticated users can access certain endpoints, improving application security.

--- a/content/docs/advanced/index.mdx
+++ b/content/docs/advanced/index.mdx
@@ -3,7 +3,8 @@ title: Advanced Topics
 description: Advanced concepts and features for experienced Eliza developers
 ---
 
-This section covers advanced topics and features for developers who want to push the boundaries of what's possible with Eliza.
+This section covers advanced topics and features for developers who want to push the boundaries of
+what's possible with Eliza.
 
 ## Topics Covered
 
