--- a/content/docs/guides/index.mdx
+++ b/content/docs/guides/index.mdx
@@ -3,7 +3,8 @@ title: Development Guides
 description: Essential guides for working with Eliza in different development scenarios
 ---
 
-This section provides comprehensive guides for different development workflows and approaches when working with Eliza.
+This section provides comprehensive guides for different development workflows and approaches when
+working with Eliza.
 
 ## Available Guides
 
@@ -22,7 +23,8 @@ This section provides comprehensive guides for different development workflows a
 ## Which Guide Should I Start With?
 
 <Callout type="info">
-  **New to Eliza?** Start with [Standalone vs Monorepo](/guides/standalone-vs-monorepo) to understand your options.
+  **New to Eliza?** Start with [Standalone vs Monorepo](/guides/standalone-vs-monorepo) to
+  understand your options.
 </Callout>
 
 ### Quick Decision Tree
