--- a/content/docs/learning-tracks/index.mdx
+++ b/content/docs/learning-tracks/index.mdx
@@ -10,7 +10,7 @@ the track that best fits your current skill level and goals.
 
 ## Available Tracks
 
-### 🚀 Simple Track
+### Simple Track
 
 Perfect for beginners who want to get started quickly with ElizaOS.
 
@@ -26,7 +26,7 @@ Perfect for beginners who want to get started quickly with ElizaOS.
 
 [Start Simple Track →](./simple/)
 
-### 🔧 Technical Track
+### Technical Track
 
 For developers who want to understand the architecture and build advanced agents.
 
