--- a/content/docs/learning-tracks/simple/templates/discord-agent.mdx
+++ b/content/docs/learning-tracks/simple/templates/discord-agent.mdx
@@ -398,5 +398,5 @@ Let your community know:
 
 ---
 
-**Remember**: Eliza is meant to be a community member, not a service bot. Let her personality
-shine through natural conversation!
+**Remember**: Eliza is meant to be a community member, not a service bot. Let her personality shine
+through natural conversation!
