--- a/content/docs/learning-tracks/technical/index.mdx
+++ b/content/docs/learning-tracks/technical/index.mdx
@@ -18,12 +18,12 @@ architecture, enabling you to build sophisticated multi-agent systems and custom
 
 By the end of this track, you'll have:
 
-- ✅ Deep understanding of ElizaOS architecture
-- ✅ Custom plugins with actions, evaluators, and providers
-- ✅ Advanced state management and memory systems
-- ✅ Multi-agent coordination patterns
-- ✅ Custom model providers and integrations
-- ✅ Production deployment strategies
+- Deep understanding of ElizaOS architecture
+- Custom plugins with actions, evaluators, and providers
+- Advanced state management and memory systems
+- Multi-agent coordination patterns
+- Custom model providers and integrations
+- Production deployment strategies
 
 ## Learning Modules
 
@@ -77,19 +77,19 @@ By the end of this track, you'll have:
 
 ## Track Features
 
-### 🏗️ Architecture Focus
+### Architecture Focus
 
 Deep dive into system design and implementation patterns.
 
-### 🔬 Hands-On Labs
+### Hands-On Labs
 
 Build real components and systems from scratch.
 
-### 📊 Performance Insights
+### Performance Insights
 
 Learn optimization techniques and monitoring strategies.
 
-### 🚀 Production Ready
+### Production Ready
 
 Deployment patterns and scaling strategies.
 
