--- a/content/docs/getting-started/configuration.mdx
+++ b/content/docs/getting-started/configuration.mdx
@@ -134,45 +134,21 @@ Each project type has its own structure:
 
 <Tabs items={["Project Structure", "Plugin Structure", "Agent Structure"]}>
   <Tab value="Project Structure">
-    ```
-my-agent/
-├── .env                    # Environment variables
-├── .env.example           # Environment template
-├── package.json           # Dependencies and scripts
-├── tsconfig.json          # TypeScript configuration
-├── characters/            # Agent character definitions
-│   └── default.json       # Default character
-├── knowledge/             # Knowledge base files
-├── src/                   # Source code
-│   ├── index.ts          # Main entry point
-│   └── plugins/          # Custom plugins
-├── tests/                 # Test files
-└── docs/                  # Documentation
-    ```
+    ``` my-agent/ ├── .env # Environment variables ├── .env.example # Environment template ├──
+    package.json # Dependencies and scripts ├── tsconfig.json # TypeScript configuration ├──
+    characters/ # Agent character definitions │ └── default.json # Default character ├── knowledge/
+    # Knowledge base files ├── src/ # Source code │ ├── index.ts # Main entry point │ └── plugins/ #
+    Custom plugins ├── tests/ # Test files └── docs/ # Documentation ```
   </Tab>
   <Tab value="Plugin Structure">
-    ```
-plugin-my-plugin/
-├── package.json           # Plugin metadata
-├── tsconfig.json          # TypeScript configuration
-├── src/
-│   ├── index.ts          # Plugin entry point
-│   ├── actions/          # Custom actions
-│   ├── providers/        # Custom providers
-│   └── evaluators/       # Custom evaluators
-├── tests/                 # Plugin tests
-├── examples/              # Usage examples
-└── README.md              # Plugin documentation
-    ```
+    ``` plugin-my-plugin/ ├── package.json # Plugin metadata ├── tsconfig.json # TypeScript
+    configuration ├── src/ │ ├── index.ts # Plugin entry point │ ├── actions/ # Custom actions │ ├──
+    providers/ # Custom providers │ └── evaluators/ # Custom evaluators ├── tests/ # Plugin tests
+    ├── examples/ # Usage examples └── README.md # Plugin documentation ```
   </Tab>
   <Tab value="Agent Structure">
-    ```
-my-character/
-├── character.json         # Agent definition
-├── knowledge/             # Knowledge files
-├── prompts/               # Custom prompts
-└── config/                # Configuration files
-    ```
+    ``` my-character/ ├── character.json # Agent definition ├── knowledge/ # Knowledge files ├──
+    prompts/ # Custom prompts └── config/ # Configuration files ```
   </Tab>
 </Tabs>
 
@@ -187,17 +163,22 @@ my-character/
 elizaos dev
 
 # Start with specific character
+
 elizaos dev --character characters/my-agent.json
 
 # Start with build
+
 elizaos dev --build
 
 # Start on custom port
+
 elizaos dev --port 8080
 
 # Reconfigure services
+
 elizaos dev --configure
-```
+
+````
     **Development Features:** - Hot-reload on file changes - Detailed logging and debugging - Live
     configuration updates - Real-time error reporting
   </Tab>
@@ -218,7 +199,7 @@ elizaos test --coverage
 # Run specific test file
 elizaos test --file my-test.spec.ts
     ```
-    
+
     **Testing Features:** - Unit and
     integration tests - Component testing framework - End-to-end testing support - Coverage
     reporting
@@ -237,7 +218,7 @@ nohup elizaos start > elizaos.log 2>&1 &
 # With environment file
 elizaos start --env production
     ```
-    
+
     **Deployment Features:** - Production optimizations -
     Environment-specific configs - Background process support - Logging and monitoring
   </Tab>
@@ -262,7 +243,7 @@ elizaos plugins remove @elizaos/plugin-discord
 
 # Update plugins
 elizaos update --packages
-```
+````
 
 ### Popular Plugins
 
@@ -373,9 +354,10 @@ EVM_PROVIDER_URL=https://mainnet.infura.io/v3/your_key
 EVM_CHAINS=mainnet,sepolia,base,arbitrum
 
 # Solana Configuration
-SOLANA_PRIVATE_KEY=your_solana_private_key
-SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
-```
+
+SOLANA_PRIVATE_KEY=your_solana_private_key SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
+
+````
   </Tab>
 </Tabs>
 
@@ -392,7 +374,7 @@ Start with the provided `.env.example` file:
 
 ```bash
 cp .env.example .env
-```
+````
 
 </Step>
 <Step>
@@ -552,105 +534,29 @@ elizaos publish
 
 <Tabs items={["Environment", "Database", "Plugins", "CLI"]}>
   <Tab value="Environment">
-    **API Key Issues**
-    
-    ```bash
-    # Check if API key is loaded
-    elizaos env list | grep OPENAI_API_KEY
-    
-    # Test API key validity
-    elizaos env test-keys
-    
-    # Common issues:
-    # - Extra spaces or quotes in .env
-    # - Wrong API key format
-    # - Insufficient API credits
-    ```
-    
-    **Environment Loading Issues**
-    
-    ```bash
-    # Check .env file format
-    cat .env | head -5
-    
-    # Test environment loading
-    node -e "console.log(process.env.OPENAI_API_KEY)"
-    
-    # Reset environment
-    elizaos env reset
-    ```
+    **API Key Issues** ```bash # Check if API key is loaded elizaos env list | grep OPENAI_API_KEY #
+    Test API key validity elizaos env test-keys # Common issues: # - Extra spaces or quotes in .env
+    # - Wrong API key format # - Insufficient API credits ``` **Environment Loading Issues** ```bash
+    # Check .env file format cat .env | head -5 # Test environment loading node -e
+    "console.log(process.env.OPENAI_API_KEY)" # Reset environment elizaos env reset ```
   </Tab>
   <Tab value="Database">
-    **Database Connection Issues**
-    
-    ```bash
-    # Test database connection
-    elizaos env test-db
-    
-    # Check database URL
-    elizaos env list | grep POSTGRES_URL
-    
-    # Switch to PGLite for development
-    echo "PGLITE_DATA_DIR=./data/pglite" >> .env
-    ```
-    
-    **Database Migration Issues**
-    
-    ```bash
-    # Reset database
-    rm -rf ./data/pglite
-    
-    # Recreate database
-    elizaos start --build
-    ```
+    **Database Connection Issues** ```bash # Test database connection elizaos env test-db # Check
+    database URL elizaos env list | grep POSTGRES_URL # Switch to PGLite for development echo
+    "PGLITE_DATA_DIR=./data/pglite" >> .env ``` **Database Migration Issues** ```bash # Reset
+    database rm -rf ./data/pglite # Recreate database elizaos start --build ```
   </Tab>
   <Tab value="Plugins">
-    **Plugin Installation Issues**
-    
-    ```bash
-    # List installed plugins
-    elizaos plugins installed-plugins
-    
-    # Remove problematic plugin
-    elizaos plugins remove @elizaos/plugin-name
-    
-    # Update all plugins
-    elizaos update --packages
-    ```
-    
-    **Plugin Compatibility Issues**
-    
-    ```bash
-    # Check plugin versions
-    elizaos plugins list --all
-    
-    # Install specific version
-    elizaos plugins add @elizaos/plugin-name@1.2.0
-    ```
+    **Plugin Installation Issues** ```bash # List installed plugins elizaos plugins
+    installed-plugins # Remove problematic plugin elizaos plugins remove @elizaos/plugin-name #
+    Update all plugins elizaos update --packages ``` **Plugin Compatibility Issues** ```bash # Check
+    plugin versions elizaos plugins list --all # Install specific version elizaos plugins add
+    @elizaos/plugin-name@1.2.0 ```
   </Tab>
   <Tab value="CLI">
-    **CLI Issues**
-    
-    ```bash
-    # Update CLI
-    bun update -g @elizaos/cli
-    
-    # Check CLI version
-    elizaos --version
-    
-    # Get help
-    elizaos --help
-    ```
-    
-    **Permission Issues**
-    
-    ```bash
-    # Fix permissions
-    sudo chown -R $(whoami) ~/.bun
-    
-    # Or use sudo for global install
-    sudo bun install -g @elizaos/cli
-    ```
+    **CLI Issues** ```bash # Update CLI bun update -g @elizaos/cli # Check CLI version elizaos
+    --version # Get help elizaos --help ``` **Permission Issues** ```bash # Fix permissions sudo
+    chown -R $(whoami) ~/.bun # Or use sudo for global install sudo bun install -g @elizaos/cli ```
   </Tab>
 </Tabs>
 
