Add new feature to process user input
Introduced a function to handle and validate user input, improving the robustness of the input processing workflow.

--- a/content/docs/api-reference/index.mdx
+++ b/content/docs/api-reference/index.mdx
@@ -231,7 +231,15 @@ Common error codes:
    curl -X POST http://localhost:3000/api/agents/{agentId}/start
    ```
 
-## Next Steps
+## API Documentation
+
+### Complete Endpoint Reference
+
+For detailed documentation of all API endpoints with examples:
+
+- [**API Endpoints Reference**](./endpoints) - Complete endpoint documentation with examples in multiple languages
+
+### API by Domain
 
 - [Agents API](./agents) - Agent lifecycle and management
 - [Messaging API](./messaging) - Real-time messaging and communication
